syntax = "proto3";

option go_package = "github.com/chronicleprotocol/oracle-suite/pkg/transport/messages/pb";

message Price {
  // Price:
  string wat = 1; // asset name
  bytes val = 2; // big.Int encoded as bytes
  int64 age = 3; // timestamp

  // Ethereum Signature:
  bytes vrs = 4; // v, r, s combined into one byte array

  // Fields 5, 6 and 7 are not longer used. They must not be used in the future.

  // Additional data:
  bytes trace = 8;
  string version = 9;
}

message DataPointMessage {
  message Signature {
    bytes signer = 1; // Signer address (types.Address)
    bytes signature = 2; // V, R, S combined into one byte array (types.Signature).
  }

  string model = 1; // Model name.
  bytes value = 2; // Data point value.
  bytes signature = 3; // Feed signature.
}

message MuSigMetaTickV1 {
  message FeedTick {
    bytes val = 1; // Tick value (bn.DecFixedPoint).
    int64 age = 2; // Unix timestamp.
    bytes vrs = 3; // V, R, S combined into one byte array (types.Signature).
  }
  message Optimistic {
    bytes ecdsaSignature = 1; // V, R, S combined into one byte array (types.Signature).
    bytes signersIndexes = 2; // Indexes of signers that participated in this MuSig signature.
  }
  string wat = 1; // Asset name.
  bytes val = 2; // Median value of all ticks (bn.DecFixedPoint).
  int64 age = 3; // Oldest tick timestamp.
  repeated Optimistic optimistic = 4; // Optional data required for optimistic poke.
  repeated FeedTick ticks = 5; // Ticks used to calculate median along with feed signatures.
}

message MuSigMeta {
  oneof msgMeta {
    MuSigMetaTickV1 ticks = 1;
  }
}

message MuSigInitializeMessage {
  bytes sessionID = 1;
  int64 startedAtTimestamp = 2;
  string msgType = 3;
  bytes msgBody = 4;
  optional MuSigMeta msgMeta = 5;
  repeated bytes signers = 6;
}

message MuSigTerminateMessage {
  bytes sessionID = 1;
  string reason = 2;
}

message MuSigCommitmentMessage {
  bytes sessionID = 1;
  bytes pubKeyX = 2;
  bytes pubKeyY = 3;
  bytes commitmentKeyX = 4;
  bytes commitmentKeyY = 5;
}

message MuSigPartialSignatureMessage {
  bytes sessionID = 1;
  bytes partialSignature = 2;
}

message MuSigSignatureMessage {
  bytes sessionID = 1;
  int64 computedAtTimestamp = 2;
  string msgType = 3;
  bytes msgBody = 4;
  optional MuSigMeta msgMeta = 5;
  repeated bytes signers = 6;
  bytes commitment = 7;
  bytes schnorrSignature = 8;
}

message Greet {
  bytes signature = 1;
  bytes pubKeyX = 2;
  bytes pubKeyY = 3;
}
